[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "splitbregman"
version = "0.0.6"
description = "Implementation of Split Bregman"
authors = [{name = "Kwang Eun Jang", email = "kejang@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "scipy",
    "PyWavelets",
]

[project.optional-dependencies]
extra = ["gradops", "thresholding"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/kejang/splitbregman"
Issues = "https://github.com/kejang/splitbregman/issues"